Update browser title to professional web developer portfolio title

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#B1855A" />
     <meta
       name="description"
-      content="React TypeScript uygulaması"
+      content="Ege Dev - Modern web developer portfolio showcasing React, TypeScript projects and professional services"
     />
-    <title>React TSX Uygulaması</title>
+    <title>Ege Dev - Web Developer & Portfolio</title>
   </head>
   <body>
     <noscript>Bu uygulamayı çalıştırmak için JavaScript'i etkinleştirmeniz gerekiyor.</noscript>
